# zhpe-ompi

./: README  README.FSM.md
examples/fsm/RMA_MATMUL/: Makefile  READ.md  matmulRMA_Shared.c  rma.c  rma.h  run_matmulRMA_test.sh
examples/fsm/RMA_MATMUL/expected-output/: matmulRMA.expected-out.seed.1
examples/fsm/STENCIL_SHARED/: READ.md  run_stencil_sharedmemory.sh  stencil.c
examples/fsm/STENCIL_SHARED/expected-output/: stencil.expected-output
ompi/mca/coll/ofi/: Makefile.am  README.md  coll_ofi.h  coll_ofi_allreduce.c  coll_ofi_bcast.c  coll_ofi_component.c  coll_ofi_module.c  coll_ofi_rdma.c  coll_ofi_reduce.c  configure.m4
ompi/mca/mtl/ofi/: mtl_ofi.h  mtl_ofi_component.c
ompi/mca/osc/sm/: Makefile.am  osc_sm.h  osc_sm_active_target.c  osc_sm_comm.c  osc_sm_component.c  osc_sm_passive_target.c
opal/mca/btl/ofi/: btl_ofi_component.c
opal/mca/common/ofi/: common_ofi.c  common_ofi.h
opal/mca/shmem/mmap/: shmem_mmap_component.c  shmem_mmap_module.c
opal/runtime/: opal_progress.c  opal_progress.h
